@@ -4,6 +4,5 @@ IllegalDictionary.ice:24: dictionary `b3' uses an illegal key type
 IllegalDictionary.ice:25: dictionary `b4' uses an illegal key type
 IllegalDictionary.ice:26: dictionary `b5' uses an illegal key type
 IllegalDictionary.ice:32: dictionary `b6' uses an illegal key type
-IllegalDictionary.ice:35: dictionary `b7' uses an illegal key type
 IllegalDictionary.ice:49: dictionary `b8' uses an illegal key type
 IllegalDictionary.ice:57: dictionary `b9' uses an illegal key type
